--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ license = { text = "Apache-2.0" }
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "einops",
     "numpy>=2.3",
     "torch",
     "transformers",
@@ -25,8 +26,6 @@ urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KohakuRAG" }
 
 [project.optional-dependencies]
 dev = []
-llm = ["openai>=1.0.0"]
-
 
 [tool.setuptools]
 package-dir = {"" = "src"}
