--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,17 @@ dependencies = [
     "torch",
     "transformers",
     "pypdf>=6.2.0",
-    "requests>=2.31.0",
+    "httpx>=0.27.0",
     "kohakuvault>=0.7.1",
     "openai>=2.8.0",
 ]
 urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KohakuRAG" }
 
 [project.optional-dependencies]
-dev = []
+dev = [
+    "pytest",
+    "pytest-asyncio",
+]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
