--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "httpx>=0.27.0",
     "kohakuvault>=0.7.1",
     "openai>=2.8.0",
+    "Pillow>=10.0.0",
 ]
 urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KohakuRAG" }
 
