--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "Pillow>=12.0.0",
     "openrouter",
     "torchvision",
-    "peft"
+    "peft",
+    "matplotlib",
 ]
 urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KohakuRAG" }
 
