--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "torch",
     "transformers",
     "pypdf>=6.2.0",
+    "pymupdf>=1.25.0",
     "httpx>=0.27.0",
     "kohakuvault>=0.7.1",
     "openai>=2.8.0",
@@ -26,6 +27,8 @@ dependencies = [
     "torchvision",
     "peft",
     "matplotlib",
+    "scikit-learn",
+    "umap-learn",
 ]
 urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KohakuRAG" }
 
